Importing a race result now automatically creates a race in the database!
